fix(SideChannelNav): update styles to improve text wrapping and overflow handling

--- a/src/components/Layout/SideChannelNav/styles.module.css
+++ b/src/components/Layout/SideChannelNav/styles.module.css
@@ -118,6 +118,8 @@
 
     display: inline-block;
     padding: var(--sp8) var(--sp10);
+    word-break: normal;
+    overflow-wrap: break-word;
     background-color: transparent;
     border-radius: 0.5rem;
     transition-property: background-color;
